--- a/index.html
+++ b/index.html
@@ -3,3 +3,91 @@ aaa
 
 ccccc
 he is very naughty boy
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+  <title>HTML Coding Practice</title>
+  <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital@0;1&family=Comfortaa:wght@300;400&family=Itim&family=Nanum+Gothic&family=Nanum+Pen+Script&family=Numans&family=Nunito+Sans:ital@0;1&family=Pangolin&family=Raleway&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  </head>
+
+<style>
+
+  .Baslsamiq {
+  font-family:'Baslsamiq Sans', cursive;
+  color: white
+}
+  .nanum-pen{
+  font-family:'Nanum Pen Script', cursive; 
+  font: size 24px;
+}
+P{
+  font-family: 'Comfortaa', cursive;
+}
+.pangolin{
+  font-family: 'Pangolin', cursive;
+}
+  
+.fonts {
+  font-family: 'Itim', cursive;
+  font-family: 'Numans', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Nanum Gothic', sans-serif;
+}
+
+.shadows {
+  font-family: 'Shadows Into Light', cursive;
+}
+.blue-text{
+color: darkblue;
+}
+.image-1{
+width: 150px;
+
+}
+
+.header {
+  background-color: black;
+  padding: 50px;
+
+  width: 320px;
+  font-famiy: 'Baslsamiq', cursive;
+  text-align: ;
+}
+
+</style>
+<body>
+  <h1>HTML Coding Practice</h1>
+<h3> Learnt from freecodecamp.org</h3>
+</body>
+
+  <!--learn how to center the font-->
+
+
+<main>
+<p style="font-family:Pangolin">This script is going to be filled with random stuff that I learn during the cousre of basic HTML. Like right now, I don't even know why I" typing this. It's completey piontless. I could be cleaning my room right now instead of doing this.</p>
+
+<p> Look at this! I embedded a photo!</p>
+<a href="#"><img class="image-1" src="https://i.pinimg.com/736x/5b/b4/8b/5bb48b07fa6e3840bb3afa2bc821b882.jpg" alt="Some random thing i found."></a>
+<h5> nodded and luaghs in awkarad wagreement. Also is semmes like my terrible spelling can't ecsape evn when I coding.*nervous laugh*</h5>
+
+<h4> Septepmer 5, 1995
+  <p> Today, I went on an advernture, I wnt in the back woods on the forest<b>
+
+<p>   This is probably like the 5 website that I have made over HTML. I keep aking thim. I switch IDEs like eevery other week. I have hope that this one will last longer. <b>
+
+</b> 
+
+<h3> The Original HTML Coding Practice</h3>
+</p> This tis teh organil conding pratce form Code Writer. For some reason I cant get it to load on her, so I'm just gonna put it here. 
+</p> After like 30 minutes of struggle. I cant get theis stupid cide to run or previwe in test. I think it might be casue it has no metadata or  header. I don't know. </p>
+
+</main>
+
+
+
+
+
+</html>
